TL-29042 editor_weka: Fix Vimeo-video not responsive when placed in dashboard block

--- a/server/filter/mediaplugin/styles.css
+++ b/server/filter/mediaplugin/styles.css
@@ -14,6 +14,10 @@
     height: auto;
 }
 
+.mediaplugin > iframe {
+    max-width: 100%;
+}
+
 .mediaplugin > div {
     margin: inherit;
 }
